--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body class="position-relative">
   <div id="topProp"></div>
+  <!-- <div class="slider-thumb"></div> -->
   <app-root></app-root>
   <div id="bottomProp"></div>
 </body>
